<resources>

    <string name="app_name">MyMeds</string>
    <string name="perdido_medicamento">¡Hoy has perdido uno de tus medicamentos!</string>
    <string name="progreso_dia">PROGRESO DEL DÍA</string>
    <string name="light">sans-serif-light</string>
    <string name="condensed">sans-serif-condensed</string>
    <string name="thin">sans-serif-thin</string>
    <string name="medium">sans-serif-medium</string>
    <string name="regular">sans-serif</string>
    <string name="inicio">INICIO</string>
    <string name="registro">REGISTRO</string>
    <string name="usuario">Usuario</string>
    <string name="constrasena">Contraseña</string>
    <string name="confirmarContrasenia">Confirmar contraseña</string>
    <string name="iniciarsesion">Iniciar sesión</string>
    <string name="registrarme">Registrarme</string>
    <string name="olvide">Olvidé mi contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="guardar">Guardar</string>

    <!-- Strings para los spinners -->
    <string name="selected_item">Opcion seleccionada:</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="correo">Correo</string>
    <string-array name="arreglo_medicamentos">
        <item>Medicamento</item>
        <item>Parecetamol</item>
        <item>Penicilina</item>
        <item>Ibuprofeno</item>
        <item>Paleta de miel</item>
    </string-array>

    <string-array name="arreglo_frecuencia">
        <item>Frecuencia</item>
        <item>Cada dia</item>
        <item>Cada dos dias</item>
        <item>Cada tres dias</item>
        <item>Cada semana</item>
    </string-array>

    <string-array name="arreglo_dosis">
        <item>Dosis</item>
        <item>1 unidad</item>
        <item>2 unidades</item>
        <item>3 unidades</item>
        <item>4 unidades</item>
    </string-array>

    <string-array name="arreglo_hora">
        <item>Hora</item>
        <item>9:00AM</item>
        <item>12:00PM</item>
        <item>3:00PM</item>
        <item>6:00PM</item>
    </string-array>

    <string-array name="arreglo_revisores">
        <item>Revisor</item>
        <item>Gerardo</item>
        <item>Jonatan</item>
        <item>Javier</item>
    </string-array>

    <string name="channel_name">notificaciones</string>
    <string name="channel_description">canal de notificaciones para medicamentos</string>

</resources>
