<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue_gradient">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicio"
        android:textColor="@color/white"
        android:fontFamily="@string/regular"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loginUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:hint="@string/correo"
            />

        <EditText
            android:id="@+id/loginContrasena"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/constrasena"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAlignment="center"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/boton_inicio"
            android:layout_width="219dp"
            android:layout_height="33dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_button"
            android:layout_gravity="center"
            android:text="@string/iniciarsesion"
            android:textColor="@color/lower_blue"
            />

        <Button
            android:id="@+id/boton_registro"
            android:layout_width="219dp"
            android:layout_height="33dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_button"
            android:layout_gravity="center"
            android:text="@string/registrarme"
            android:textColor="@color/lower_blue"
            />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/olvide"
            android:fontFamily="@string/regular"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:contextClickable="true"/>

    </LinearLayout>

    <include layout="@layout/bottom_image"/>

</LinearLayout>