<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue_gradient"
    tools:context=".registro">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="120dp"/>

    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textAlignment="center"
            android:hint="@string/usuario"
            />

        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/constrasena"
            android:textColorHint="@color/white"
            android:textAlignment="center"
            android:inputType="textPassword"
            />

        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmarContrasenia"
            android:textColorHint="@color/white"
            android:textAlignment="center"
            android:inputType="textPassword"
            />

        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            />

        <Button
            android:layout_width="219dp"
            android:layout_height="33dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_button"
            android:layout_gravity="center"
            android:text="@string/registrarme"
            android:textColor="@color/lower_blue"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        />

</LinearLayout>